--- a/views/materials.ejs
+++ b/views/materials.ejs
@@ -95,7 +95,7 @@
 <body>
   <h1>Registro de Materiales Reciclables</h1>
 
-  <form action="/Materials" method="POST">
+  <form action="/materials" method="POST">
     <input name="tipo" placeholder="Tipo (Plástico, Papel...)" required>
     <input name="descripcion" placeholder="Descripción" required>
     <input name="fecha_registro" type="date" required>
@@ -131,4 +131,3 @@
   </script>
 </body>
 </html>
-
